<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RegisterFragment"
    android:background="@color/colorBackground"
    android:fillViewport="true">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <ImageView
            android:id="@+id/logo_big"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:layout_above="@+id/textInputLayoutFirstName"
            android:layout_gravity="top"
            android:src="@drawable/logo_left" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="-70dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorLightFont">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_corner"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/first_name"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:textColor="@color/colorLightFont"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutFirstName"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/colorLightFont">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_corner"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/last_name"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/colorLightFont"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/colorLightFont"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_corner"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColor="@color/colorLightFont"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/colorLightFont"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorLightFont">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_corner"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/colorLightFont"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/round_corner"
            android:text="@string/sign_up"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="25sp"
            android:textColor="@color/colorLightFont" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_left"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/swipeRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_right_for_sign_in"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorMainFont"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </TableLayout>

</ScrollView>