<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/colorBackground"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <ImageView
            android:id="@+id/logo_big"
            android:layout_width="212dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_above="@id/btn_equipment"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/btn_equipment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_library"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/round_corner"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/equipment"
            android:textColor="@color/colorLightFont"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_library"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutSignInPassword"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/round_corner"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/library"
            android:textColor="@color/colorLightFont"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_report"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutSignInPassword"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/round_corner"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/report"
            android:textColor="@color/colorLightFont"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutSignInPassword"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/round_corner"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/feedback"
            android:textColor="@color/colorLightFont"
            android:textSize="22sp" />

        <!--        android:id="@+id/btn_equipment"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/equipment"-->
        <!--        android:layout_marginLeft="60dp"-->
        <!--        android:layout_marginRight="60dp"-->
        <!--        android:layout_marginBottom="-70dp"-->
        <!--        android:layout_marginTop="90dp"-->
        <!--        android:background="@drawable/round_corner"-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/textInputLayoutSignInUsername"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_above="@id/textInputLayoutPassword"-->
<!--            android:layout_marginLeft="60dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:layout_marginRight="60dp"-->
<!--            android:layout_marginBottom="-70dp"-->
<!--            android:textColorHint="@color/colorLightFont"-->
<!--            app:errorEnabled="true">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_signin_username"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/round_corner"-->
<!--                android:fontFamily="@font/montserrat_light"-->
<!--                android:hint="@string/username"-->
<!--                android:inputType="phone"-->
<!--                android:paddingStart="20dp"-->
<!--                android:textColor="@color/colorLightFont"-->
<!--                android:textSize="22sp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/textInputLayoutSignInPassword"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_marginLeft="60dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:layout_marginRight="60dp"-->
<!--            android:paddingTop="60dp"-->
<!--            android:textColorHint="@color/colorLightFont"-->
<!--            app:errorEnabled="true"-->
<!--            app:passwordToggleEnabled="true"-->
<!--            app:passwordToggleTint="@color/colorLightFont">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_signin_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/round_corner_green"-->
<!--                android:fontFamily="@font/montserrat_light"-->
<!--                android:hint="@string/password"-->
<!--                android:inputType="textPassword"-->
<!--                android:paddingStart="20dp"-->
<!--                android:textColor="@color/colorLightFont"-->
<!--                android:textSize="22sp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutSignInPassword"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/round_corner_green"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/logout"
            android:textColor="@color/colorLightFont"
            android:textSize="25sp" />

    </TableLayout>
</ScrollView>